deploy: 281df9940c1588af7295c4f66f41ef8adff476d4

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <a href="https://codecov.io/gh/typelevel/frameless"><img src="https://codecov.io/gh/typelevel/frameless/branch/master/graph/badge.svg" alt="Codecov Badge"></a>
         <a href="https://discord.gg/ZDZsxWcBJt"><img src="https://img.shields.io/badge/chat-on%20discord-46BC99" alt="Discord Badge"></a>
         <a href="https://search.maven.org/search?q=g:org.typelevel%20and%20frameless"><img src="https://img.shields.io/maven-central/v/org.typelevel/frameless-core_2.12?color=blue" alt="Maven Badge"></a>
-        <a href="https://oss.sonatype.org/content/repositories/snapshots/org/typelevel/"><img src="https://img.shields.io/nexus/s/https/oss.sonatype.org/org.typelevel/frameless-core_2.12" alt="Snapshots Badge"></a></p>
+        <a href="https://s01.oss.sonatype.org/content/repositories/snapshots/org/typelevel/frameless-core_2.12/"><img src="https://img.shields.io/nexus/s/https/s01.oss.sonatype.org/org.typelevel/frameless-core_2.12" alt="Snapshots Badge"></a></p>
         <p>Frameless is a Scala library for working with <a href="http://spark.apache.org/">Spark</a> using more expressive types.
         It consists of the following modules:</p>
         <ul>
