deploy: 29d8d1580a36032fe9f217ad79a3954962c16574

--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
         <h2 id="quick-start" class="section">Quick Start<a class="anchor-link right" href="#quick-start"><i class="icofont-laika">&#xef71;</i></a></h2>
         <p>Since the 0.9.x release, Frameless is compiled only against Scala 2.12.x.</p>
         <p>To use Frameless in your project add the following in your <code>build.sbt</code> file as needed:</p>
-        <pre class="keep-together pdf epub"><code class="nohighlight"><span class="keyword">val</span><span> </span><span class="identifier">framelessVersion</span><span> = </span><span class="string-literal">&quot;&lt;latest version&gt;&quot;</span><span> </span><span class="comment">// for Spark 3.0.0
-</span><span>
+        <pre class="keep-together pdf epub"><code class="nohighlight"><span class="keyword">val</span><span> </span><span class="identifier">framelessVersion</span><span> = </span><span class="string-literal">&quot;&lt;latest version&gt;&quot;</span><span>
+
 </span><span class="identifier">resolvers</span><span> ++= </span><span class="type-name">Seq</span><span>(
   </span><span class="comment">// for snapshot artifacts only
 </span><span>  </span><span class="string-literal">&quot;s01-oss-sonatype&quot;</span><span> </span><span class="identifier">at</span><span> </span><span class="string-literal">&quot;https://s01.oss.sonatype.org/content/repositories/snapshots&quot;</span><span>
